--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,14 @@
 .read-the-docs {
   color: #888;
 }
+
+.fc { /* the calendar root */
+  max-width: 1100px;
+  min-width: 640px;
+  margin: 0 auto;
+}
+
+.fc-h-event .fc-event-main{
+  text-align: center;
+  padding: 1rem 0;
+}
